WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286382
[Cookie Store API] Throw error on attempt to set cookies for a public suffix domain
https://bugs.webkit.org/show_bug.cgi?id=286382
Summary
[Cookie Store API] Throw error on attempt to set cookies for a public suffix ...
rupin
Reported
2025-01-22 14:09:05 PST
[Cookie Store API] Throw error on attempt to set cookies for a public suffix domain
Attachments
Add attachment
proposed patch, testcase, etc.
rupin
Comment 1
2025-01-22 14:11:50 PST
rdar://143095098
rupin
Comment 2
2025-01-22 14:20:30 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39407
EWS
Comment 3
2025-01-23 09:34:54 PST
Committed
289296@main
(f9cc03148c7f): <
https://commits.webkit.org/289296@main
> Reviewed commits have been landed. Closing PR #39407 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug